fix: Change navbar alignment to flex-start for improved layout on mobile

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -90,7 +90,7 @@ a:hover {
   .navbar { 
       flex-direction: row; /* Align items in a row on mobile for brand and hamburger */
       justify-content: space-between;
-      align-items: center;
+     align-items: flex-start;
   }
 
   .hamburger {
